# ShotTrainer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENCE  Makefile  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  target-face-request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: accuracy.md  architecture.md  audio-setup.md  calibration.md  cameras.md  engineering-notes.md  getting-started.md  how-tracking-works.md  index.md  installation.md  preferences.md  printing-targets.md  provided-targets.md  releases.md  replay.md  scoring.md  session-browser.md  sessions.md  setup.md  shortcuts.md  stats.md  troubleshooting.md
docs/assets/: mermaid-init.js
docs/cameras/: arducam-ov9281.md  template.md
docs/cameras/images/: README.md
docs/stylesheets/: landing.css  site.css
overrides/: landing.html
overrides/partials/: footer.html  header.html
packaging/: Info.plist.in  README.md  ShotTrainer.py  build_icns.sh  build_nuitka.py  make_dmg.sh  make_installer.ps1  shottrainer.iss  shottrainer.spec
scripts/: inject_dummy_session.py
src/shottrainer/: __init__.py
src/shottrainer/app/: calibration_controller.py  main.py  (+16 more)
tests/: conftest.py  test_calibration.py  test_calibration_store.py  test_calibration_watcher.py  test_camera_manager.py  test_camera_selection.py  test_capture_pipeline.py  test_circle_detector.py  test_controller.py  test_database_migration.py  test_detector.py  test_detector_store.py  test_detector_tuning.py  test_exporter.py  test_frame_ops.py  test_preferences_manager.py  test_replay.py  test_replay_coordinator.py  test_scoring.py  test_scoring_properties.py  test_session_browser.py  test_session_manager.py  test_session_recorder.py  test_sessions_repository.py  test_settings.py  test_settings_watcher.py  test_sheet_detector.py  test_shot_coordinator.py  test_shot_detector.py  test_shot_stats.py  test_shot_stats_properties.py  test_target_faces.py  test_trace_buffer.py  test_tracker.py  test_ui_panels.py  test_ui_smoke.py  test_ui_state.py  test_ui_widgets.py  test_uncalibrated_tracking.py  test_zero_offset_store.py
(+54 files in other folders)
