[project]
name = "shottrainer"
version = "0.1.0"
description = "Optical shooting trainer with camera tracking and audio shot detection"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "dsgnr" }]

dependencies = [
    "PySide6>=6.6",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
package = [
    "nuitka>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "pylint>=3.2",
]

[project.scripts]
shottrainer = "shottrainer.app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shottrainer = ["py.typed", "ui/assets/*", "ui/assets/target_faces/*"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
packages = ["shottrainer"]
mypy_path = "src"

[tool.pylint.main]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "duplicate-code",
    "broad-exception-caught",
    "fixme",
    # PySide6's Signal class is generated at runtime. Pylint can't see
    # its `connect`/`emit` so it complains everywhere a signal is connected.
    "no-member",
]
ignore = ["build", "dist", ".venv", "site"]
extension-pkg-allow-list = ["cv2", "PySide6"]
generated-members = ["cv2.*", "PySide6.*"]

[tool.pylint.format]
max-line-length = 100
